--- a/prompt-generator/landing.html
+++ b/prompt-generator/landing.html
@@ -10,9 +10,7 @@
 <body>
     <div class="link-container">
         <a href="./landing.html">Home</a>
-        <a>Solutions</a>
-        <a>About Us</a>
-        <a>Contact Us</a>
+        <a href="./about.html">About Us</a>
         <a href="./test.html">SmartScape Guide</a>
     </div>
 </body>
