--- a/prompt-generator/test.html
+++ b/prompt-generator/test.html
@@ -25,17 +25,16 @@
       </p>
       <div class="img-description">
         <div class="image-container">
-          <img src="../assets/wrapper.png" alt="" />
         </div>
         <div class="description">
-          <p>Welcome to the SmartScape Guide !</p>
+          <p class="color1">Welcome to the SmartScape Guide !</p>
           <span>
             Here, you'll experience a glimpse of how SmartScape can transform
             your garden dreams into a visual reality. Our innovative tool blends
             your imagination with advanced AI technology to create a lifelike
             image of your ideal garden.
           </span>
-          <p>How It Works:</p>
+          <p class="color1">How It Works:</p>
           <span>
             Answer Six Key Questions: You'll be asked about your garden's
             layout, plant preferences, color schemes, themes, usage, and any
@@ -47,11 +46,14 @@
             midjourney tool to generate a detailed, realistic image of your
             envisioned garden.
           </span>
-          <p>Start Your Journey:</p>
+          <p class="color1">Start Your Journey:</p>
           <span>
             Are you ready to see your dream garden come to life? Begin by taking
             the test !
           </span>
+          <p>
+            Send us the generated Prompts via mail address <a href="">contact@smartscape.ma</a> and wait for the generated image for a few seconds
+          </p>
         </div>
       </div>
       <button><a href="./index.html"> Take Test <i class="fa-solid fa-arrow-right"></i> </a></button>
