--- a/prompt-generator/index.html
+++ b/prompt-generator/index.html
@@ -4,7 +4,8 @@
     <title>GreenScape Guide: Dream Garden Visualizer</title>
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 </head>
 <body>
     <div id="question-form">
@@ -18,6 +19,12 @@
         <button onclick="generatePrompt()">Generate Prompt</button>
         <p id="output"></p>
     </div>
+    <div class="button-container">
+        <a href="./landing.html" class="circle-button"><i class="fa-solid fa-house"></i></a>
+        <a href="./test.html" class="circle-button"><i class="fa-regular fa-map"></i></a>
+        <a href="./about.html" class="circle-button"><i class="fa-solid fa-circle-info"></i></a>
+    </div>    
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
